--- a/tic-tac-toe-game/css/style.css
+++ b/tic-tac-toe-game/css/style.css
@@ -1,21 +1,138 @@
+
+body {
+  background-color: #5bc0de;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .container {
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+.players-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.player {
+  width: 100px;
+  height: 120px;
+  text-align:center;
+}
+
+.cross-null-img {
+  height: 80px;
+}
+
+.score {
+  color: gray;
+  font-size: 38px;
+  letter-spacing: -5px;
+}
+
+.score-point {
+  color: #dfdfdf;
+}
+
+.tiles-container {
   display: grid;
   grid-template-columns: 100px 100px 100px;
-  column-gap: 10px;
-  row-gap: 10px;
+  gap: 10px 10px;
 }
 
 .col {
   height: 100px;
   width: 100px;
-  border: 2px solid rgb(120, 120, 120);
   cursor: pointer;
+  border-radius: 15px;
+  background-color: #dddddd;
 }
 
 .cross {
-  background-color: rgb(94, 167, 255);
+  background-image: url(../img/cross.svg);
 }
 
 .null {
-  background-color: rgb(255, 87, 118);
+  background-image: url(../img/o.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
+
+.opacity {
+  opacity: 0.3;
+  z-index: 1;
+}
+
+.tiles-container.game-over {
+  pointer-events: none;
+}
+
+.tiles-container.game-over .col {
+  opacity: 0.3;
+}
+
+.tiles-container.game-over .col.win {
+  opacity: 1;
+  transform: scale(1.06);
+  transition: 0.3s ease-in;
+}
+
+.draw {
+  display: grid;
+  place-items: center;
+  visibility: hidden;
+  width: 318px;
+  height: 118px;
+  position: absolute;
+  top: 42%;
+  color: #ddd;
+  font-size: 53px;
+  background-color: #d62d20;
+  border-radius: 15px;
+  z-index: 99;
+}
+
+.draw-text {
+  text-transform: uppercase;
+  color: #ddd;
+}
+
+.visibility {
+  visibility: visible;
+}
+
+.reset-play-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.reset-play-btn {
+  width: 120px;
+  padding: 10px 0;
+  margin-top: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 13px;
+  font-family: system-ui;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s ease-in;
+  color: #dddddd;
+}
+
+.reset-play-btn:hover {
+  transform: scale(1.06);
+}
+
+.green {
+  background-color: #0057e7;
+}
+
+.red {
+  background-color: #d62d20;
+}
+
+
